# Compiler

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Compiler.sln  CompilerCLI.vcxproj  CompilerCLI.vcxproj.filters  Doxyfile  JIT.h  README.md  codegen_tests.cpp  codegen_tests.vcxproj  common_default.props  common_default_macros.props  compiler_cli.cpp  doc_fix.py  llvm_inc.props  llvm_k_test.vcxproj  pch.h  vcpkg.json
class_diagram_creator/: .gitignore  create_complete diagram.py  duplicates_whitelist.txt
docs/html/: _a_s_t_8cpp.html  _a_s_t_8cpp__incl.map  _a_s_t_8cpp__incl.md5  _a_s_t_8h.html  _a_s_t_8h__dep__incl.map  _a_s_t_8h__dep__incl.md5  _a_s_t_8h__incl.map  _a_s_t_8h__incl.md5  _a_s_t_8h_source.html  _c_make_lists_8txt.html  _code_gen_8cpp.html  _code_gen_8cpp__incl.map  _code_gen_8cpp__incl.md5  _code_gen_8h.html  _code_gen_8h__dep__incl.map  _code_gen_8h__dep__incl.md5  _code_gen_8h__incl.map  _code_gen_8h__incl.md5  _code_gen_8h_source.html  _context_8cpp.html  _context_8cpp__incl.map  _context_8cpp__incl.md5  _context_8h.html  _context_8h__dep__incl.map  _context_8h__dep__incl.md5  _context_8h__incl.map  _context_8h__incl.md5  _context_8h_source.html  _error_8cpp.html  _error_8cpp__incl.map  _error_8cpp__incl.md5  _error_8h.html  _error_8h__dep__incl.map  _error_8h__dep__incl.md5  _error_8h__incl.map  _error_8h__incl.md5  _error_8h_source.html  _instructions_8cpp.html  _instructions_8cpp__incl.map  _instructions_8cpp__incl.md5  (+589 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  (+67 more)
llvm_build/: llvm_build.vcxproj
src/: AST.cpp  CMakeLists.txt  CodeGen.cpp  Context.cpp  Error.cpp  Instructions.cpp  Layout.cpp  Options.cpp  Parser.cpp  Tokenizer.cpp  Types.cpp  codegen_tests.cpp  compiler_cli.cpp  llvm_k_test.cpp
src/include/: AST.h  CodeGen.h  Context.h  Enums.h  Error.h  Instructions.h  JIT.h  Layout.h  Options.h  Parser.h  Program.hpp  Tokenizer.h  Types.h  pch.h
src/tests/: CMakeLists.txt  codegen_tests.cpp  compiler_cli.cpp  llvm_k_test.cpp
